extends ScrollContainer


# Changes  Grid Layout Per Instance
export (bool) var HORIZONTAL : bool
export (bool) var VERTICAL : bool
export (bool) var AUTO : bool # uses screen dimension to set Layout

# Controls the Texture Button Visibility

export (bool) var chap_1 : bool
export (bool) var chap_2 : bool
export (bool) var chap_3 : bool
export (bool) var chap_4 : bool
export (bool) var chap_5 : bool
export (bool) var chap_6 : bool
export (bool) var chap_7 : bool


